# route_viewer

./: .env  .gitignore  README.md  about.py  app.py  backup_app.py  create_obt.py  data_page.py  main.py  main_page.py  new_app.py  new_file.txt  new_pipe.py  pipeline.py  pyproject.toml  run_pipe.py  run_pipeline.py  test.py  test_app.py  variables.env  xapp.py  xrun_pipe.py
.streamlit/: config.toml
app_files/: controls.py  get_data.py  get_notes.py  get_notes_table.py  get_plot.py  get_profile_plot.py  input_menu.py  lap_menu.py  route_menu.py  visualise_data.py
app_functions/: coffee.py  outputs.py  user_inputs.py
app_pages/: data.py  index.py
data/: annotations.csv  data.duckdb  notes.csv  raw_data.duckdb  road_descriptions.csv  route_lengths.csv  route_modifiers.csv  route_mods.csv  route_roads.csv  route_sectors.csv  routes.csv  sector_descriptions.csv  sectors.csv  zi_routes.csv
extract/: extract_fit.py
html/: google_analytics.html
images/: roads.pptx
load/: dim_annotations.py  dim_fit.py  fit_to_df.py  stg_annotations.py  stg_fit.py
load_raw/: fit_to_df.py  load_fit.py  load_obt.py
pipeline/: checks.py  core.py  fit_to_df.py  intermediate.py  read_gpx.py  read_raw.py  staging.py
webapp_files/: about.py  hidden.py  index.py  search.py  style.css
webapp_functions/: load_data.py  notes_table.py  outputs.py  profile_plot.py  user_input_route.py  user_input_settings.py  user_inputs.py
xapp_files/: user_inputs.py
xapp_functions/: user_inputs.py
xapp_pages/: about.py  data.py  index.py
xdata/: route_lengths.csv  routes.csv  sectors.csv
(+105 files in other folders)
