[tool.poetry]
name = "route-viewer"
version = "0.1.0"
description = ""
authors = ["robgriffin247 <robgriffin247@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
duckdb = "^1.1.1"
fitdecode = "^0.10.0"
streamlit = "^1.39.0"
plotly = "^5.24.1"
dash = "^2.18.1"
streamlit-analytics = "^0.4.1"
gpxpy = "^1.6.2"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
